--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
                 <li><a href="#">Blog Platform</a></li>
             </ul>
         </section>
+    
+        <section>
+<h2>Contact</h2>
+<P>If you'd like to reach out, feel free to visit our office</P>
+<address>
+<p>My Awesome Web Development Co.</p>
+<p>4464 Hickory Ridge Drive</p>
+<p>Las Vegas, NV 55555</p>
+
+</address>
+<footer> &copy; Chris Doe 2024</footer>
+
+    </section>
+    
     </main>
 </body>
 
